[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "suprafit"
version = "0.1.0"
description = "Python control interface for SupraFit (JSON/CLI backend). Claude Generated."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Conrad Hübler", email = "Conrad.Huebler@gmx.net" }]
keywords = ["supramolecular", "chemistry", "titration", "fitting", "NMR", "ITC"]
dependencies = [
    "numpy>=1.20; python_version < '3.13'",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/conradhuebler/SupraFit"

[tool.setuptools]
packages = ["suprafit"]

[tool.pytest.ini_options]
testpaths = ["tests"]